Changes in robustHD version 0.3.3

    + sparseLTS() no longer uses subsampling algorithm in the special case of 
      alpha = 1.


Changes in robustHD version 0.3.2

    + Bugfixes in sparseLTS() preventing errors for high-dimensional data.


Changes in robustHD version 0.3.1

    + rlars now uses perryFit() instead of perryTuning() for prediction error 
      estimation.
    
    + Bugfix in rlars() allowing the number of variables to be sequenced to be 
      larger than half the number of observations.
    
    + Bugfix in sparseLTS() in case of only one predictor variable.
    
    + Added tests for C++ implementation of the lasso.


Changes in robustHD version 0.3.0

    + Redesign of the class structure.
    
    + Redesign of how C++ back end is called.
    
    + Functionality of sparseLTSGrid() now included in sparseLTS(); 
      sparseLTSGrid() is now a deprecated wrapper function.
    
    + Restructured internal code for computing initial subsets for sparse LTS.
    
    + rlars() now supports data cleaning RLARS, with an extra PCA step for 
      high-dimensional data.
    
    + New argument 's' in rlars() to select the steps along the sequence for 
      which to compute submodels
    
    + fortify() and diagnosticPlot() methods for class "seqModel".
    
    + Bugfix in predict() method for "sparseLTS" if object was computed without 
      intercept.



Changes in robustHD version 0.2.2

    + Bugfix in sparseLTS() for more stability of the results.
    
    + Bugfix in winsorize(): weights are now correctly returned as vector for 
      a matrix with only one column.
    
    + Bugfix in diagnosticPlot(): previous setting of devAskNewPage() is now 
      retained on exit.


Changes in robustHD version 0.2.1

    + Bugfix in rlars(): formula method now only adds function call and model 
      terms if the default method returns an "rlars" object, not if only the 
      sequence is returned.
    