@@ -13,6 +13,11 @@
   \item{y}{a numeric vector containing the response
   variable.}
 
+  \item{normalize}{a logical indicating whether the
+  winsorized predictor variables should be normalized to
+  have unit \eqn{L_{2}}{L2} norm (the default is
+  \code{TRUE}).}
+
   \item{intercept}{a logical indicating whether a constant
   term should be included in the model (the default is
   \code{TRUE}).}
@@ -91,6 +96,11 @@ lambda0(x, y)
   Andreas Alfons
 }
 \references{
+  Alfons, A., Croux, C. and Gelper, S. (2013) Sparse least
+  trimmed squares regression for analyzing high-dimensional
+  large data sets. \emph{The Annals of Applied Statistics},
+  \bold{7}(1), 226--248.
+
   Efron, B., Hastie, T., Johnstone, I. and Tibshirani, R.
   (2004) Least angle regression. \emph{The Annals of
   Statistics}, \bold{32}(2), 407--499.
