@@ -2,6 +2,9 @@ Changes in robustHD version 0.3.3
 
     + sparseLTS() no longer uses subsampling algorithm in the special case of 
       alpha = 1.
+    
+    + sparseLTS() now has argument 'normalize' to specify whether the predictor
+      variables should be normalized.
 
 
 Changes in robustHD version 0.3.2
